@@ -1,6 +1,6 @@
 <?php
 
-$custom_footer = "themes/$theme/footer.php";
+$custom_footer = "./themes/$theme/footer.php";
 if(file_exists($custom_footer)) {
 	include($custom_footer);
 }
